# zephyr-example

./: .gitignore
doc/: Application Development.md  all-in-one.md  build.md  gpio-subsystem.md  interrupt-subsystem.md  porting.md  power-management-subsystem.md  startup-to-main.md
f411ceu6/: info.md
f411ceu6/blinky/: CMakeLists.txt
f411ceu6/boards/weact/f411ceu6/: Kconfig.defconfig  Kconfig.f411ceu6  board.cmake  board.yml  f411ceu6.dts  f411ceu6.yaml
f411ceu6/boards/weact/f411ceu6/support/: openocd.cfg
f411ceu6/doc/: gpio-subsystem.md  interrupt-subsystem.md  startup-to-main.md  timer-subsystem.md
f411ceu6/tools/: serial.py
f411ceu6_baremetal/bsp_weact/: CMakeLists.txt
f411ceu6_baremetal/bsp_weact/cmake/: STM32F411CEUx_FLASH.ld  toolchain-arm-none-eabi.cmake
fmr_cc/: CMakeLists.txt  Kconfig  prj.conf  readme.md
fmr_cc/boards/: hc32f4a0pgtb.overlay
fmr_cc/src/: app_msg.c  app_msg.h  battery.c  battery.h  comm_485_lift.c  comm_485_lift.h  crc16_modbus.c  crc16_modbus.h  doraemon_pack.c  doraemon_pack.h  imu5115.c  imu5115.h  led_statu.c  led_statu.h  main.c  manual_ctrl.c  manual_ctrl.h  moto.c  moto.h  servo.c  servo.h  usb_uplink.c  usb_uplink.h  wbus.c  wbus.h
hc32/: CMakeLists.txt  prj-dma.conf  prj.conf  readme.md
hc32/boards/hdsc/hc32f460petb/: Kconfig.hc32f460petb  board.yml  hc32f460petb.dts  hc32f460petb_defconfig
hc32/boards/hdsc/hc32f4a0pgtb/: Kconfig.hc32f4a0pgtb  board.cmake  board.yml  hc32f4a0pgtb.dts  hc32f4a0pgtb_defconfig
hc32/doc/: add_new_soc.md  clocks-rcc.md  fmr_cc_business.md  iwdg.md  pinctrl.md  porting-guide.md  power-states.md  review_hc32f460.md  timers.md  wwdg.md
hc32/drivers/: CMakeLists.txt  Kconfig
hc32/drivers/clock_control/: CMakeLists.txt  Kconfig  clock_control_hc32.c
hc32/drivers/counter/: CMakeLists.txt  Kconfig  counter_hc32_tmra.c
hc32/drivers/gpio/: Kconfig  gpio_hc32.c
hc32/drivers/pinctrl/: CMakeLists.txt  Kconfig  pinctrl_hc32.c
hc32/drivers/serial/: CMakeLists.txt  uart_hc32.c
hc32/drivers/watchdog/: Kconfig  wdt_hc32.c  wdt_hc32_swdt.c
hc32/dts/arm/hdsc/: hc32f460.dtsi  hc32f4a0.dtsi
hc32/dts/bindings/clock/: hdsc,hc32-clock.yaml
hc32/dts/bindings/counter/: hdsc,hc32-tmra-counter.yaml
hc32/dts/bindings/gpio/: hdsc,hc32-gpio.yaml
hc32/dts/bindings/pinctrl/: hdsc,hc32-pinctrl.yaml
hc32/dts/bindings/serial/: hdsc,hc32-usart.yaml
hc32/dts/bindings/watchdog/: hdsc,hc32-swdt.yaml  hdsc,hc32-wdt.yaml
hc32/include/zephyr/dt-bindings/pinctrl/: hc32-pinctrl-func.h  hc32-pinctrl.h
hc32/soc/hdsc/hc32f460/: CMakeLists.txt  Kconfig.defconfig  Kconfig.soc  hc32_clock.h  hc32_power.h  hc32_uart.h  hc32f4xx_conf.h  icg_config.c  pinctrl_soc.h  power.c  soc.c  soc.h
hc32/soc/hdsc/hc32f4a0/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  hc32_clock.h  hc32_power.h  hc32_uart.h  hc32f4xx_conf.h  icg_config.c  icg_rom_start.ld  pinctrl_soc.h  power.c  soc.c  soc.h  soc.yml
hc32/src/: driver_tests.c  main.c  main_f4a0_smoke.c  shell_cmds.c
hc32f460petb/: CMakeLists.txt  prj-dma.conf  prj.conf
hc32f460petb/boards/hdsc/hc32f460petb/: board.cmake  hc32f460petb.dts  hc32f460petb_defconfig
hc32f460petb/doc/: startup-comparison.md
hc32f460petb/drivers/: CMakeLists.txt  Kconfig
hc32f460petb/drivers/gpio/: CMakeLists.txt  Kconfig
hc32f460petb/drivers/serial/: Kconfig  uart_hc32.c
hc32f460petb/dts/arm/hdsc/: hc32f460.dtsi
hc32f460petb/dts/bindings/flash/: hdsc,hc32-flash-controller.yaml
hc32f460petb/dts/bindings/serial/: hdsc,hc32-usart.yaml
hc32f460petb/soc/hdsc/hc32f460/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  hc32f4xx_conf.h  soc.c  soc.yml
hc32f460petb/src/: main.c  shell_cmds.c
hc32f460petb_baremetal/bsp_uyup/: CMakeLists.txt  Readme.txt
hc32f460petb_baremetal/bsp_uyup/GCC/: Makefile  gpio_output_JLinkDownload.launch  gpio_output_PyOCDDebug.launch
hc32f460petb_baremetal/bsp_uyup/GCC/config/linker/: HC32F460_RAM.ld
hc32f460petb_baremetal/bsp_uyup/drivers/: bsp_uyup.c  bsp_uyup.h
hc32f460petb_baremetal/bsp_uyup/source/: hc32f4xx_conf.h  main.c  main.h
hc32f460petb_baremetal/bsp_uyup/tests/: test_adc.c  test_all.h  test_can.c  test_clock.c  test_crypto.c  test_dma.c  test_examples.c  test_flash_internal.c  test_gpio.c  test_i2c.c  test_rs485.c  test_rtc.c  test_sdio.c  test_spi.c  test_timer.c  test_uart.c  test_usb.c  test_wdt.c  test_ws2812b.c
hc32f460petb_baremetal/docs/: clocks_power.md  minimal_boot.md  pin_map.md  usart.md
hc32f460petb_baremetal/gpio_output/: Readme.txt
hc32f460petb_baremetal/gpio_output/GCC/: .cproject  .project  download.jlink  gpio_output_JLinkDebug.launch  gpio_output_PyOCDDownload.launch
hc32f460petb_baremetal/gpio_output/GCC/config/linker/: HC32F460xC.ld
hc32f460petb_baremetal/gpio_output/GCC/source/: picolibc_stub.c
hc32f460petb_baremetal/gpio_output/source/: hc32f4xx_conf.h  main.c
